--- a/HTML02/styles/styles.css
+++ b/HTML02/styles/styles.css
@@ -12,25 +12,25 @@ table, th, td{
     border-style:dotted;
 }
 
-p{
+/* p{
     font-size: 20px;
     margin-bottom: 3px;
     font-weight: bold;
-}
+} */
 
 table{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
 
 td{
     text-align: center;
 }
 
-a{
+/* a{
     text-decoration: none;
     color:yellow;
-}
+} */
 
 #pikachu {
     width: 50px;
